packages/next-swc/crates/core/tests/errors/next-font-downloaders/font-modules/too-many-args/output.js
import inter from '@next/google-fonts?{"font":"Inter"}';
fn({}, 10);
